--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Buddhist-inspired blog",
   "scripts": {
     "build": "postcss assets/css/main.css -o assets/css/styles.css",
-    "watch": "postcss assets/css/main.css -o assets/css/styles.css --watch"
+    "watch": "postcss assets/css/main.css -o assets/css/styles.css --watch",
+    "jekyll:build": "JEKYLL_ENV=production bundle exec jekyll build",
+    "netlify:build": "npm run build && npm run jekyll:build"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
