--- a/_config.yml
+++ b/_config.yml
@@ -19,19 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Observant
-email: your-email@example.com
+email: ian.campbell.92@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog for Buddhist-inspired observations and discussions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  Iancam
+github_username: Iancam
 
 # Build settings
 # Using custom theme with Tailwind CSS
+
+# Permalink structure (title only, no date)
+permalink: /:title/
 plugins:
   - jekyll-feed
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
