improved theme, updated about page, added dates, added comments

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ github_username: Iancam
 permalink: /:title/
 plugins:
   - jekyll-feed
+  - jekyll-cache-bust
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
