--- a/netlify.toml
+++ b/netlify.toml
@@ -15,4 +15,4 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://giscus.app; frame-src https://giscus.app; style-src 'self' 'unsafe-inline' https://giscus.app; font-src https://giscus.app;"
